@@ -3,6 +3,7 @@ linux-base (4.2) UNRELEASED; urgency=medium
   * Change source format to 3.0 (native) so that .git directory is excluded
     by default
   * Add manual page for linux-update-symlinks
+  * read_kernelimg_conf(): Quietly ignore settings used only by kernel-package
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 05 Jun 2016 02:21:25 +0100
 
